--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -488,10 +488,9 @@ end function
 \newpage
 
 \chapter{Ergebnisse}
-
-- k = 4 als Sieger des statischen und 
-
-\input{results/comparison_results_table.tex}
+\begin{center}
+    \input{results/statistical_results_table.tex}
+\end{center}
 
 \newpage
 
