--- a/thesis/results/statistical_results_table.tex
+++ b/thesis/results/statistical_results_table.tex
@@ -1,90 +1,90 @@
-\begin{longtable}{llrlrrrrrl}
+\begin{longtable}[b]{llrlll}
 \caption{BVH Performance Comparison Results} \label{tab:statistical_results} \\
 \toprule
-Model & Algorithm & k & Type & k=2 Time (s) & k=X Time (s) & Speedup & \% Change & t-statistic & p-value \\
+Model & Algorithm & k & Type & \% Change & p-value \\
 \midrule
 \endfirsthead
 \caption[]{BVH Performance Comparison Results} \\
 \toprule
-Model & Algorithm & k & Type & k=2 Time (s) & k=X Time (s) & Speedup & \% Change & t-statistic & p-value \\
+Model & Algorithm & k & Type & \% Change & p-value \\
 \midrule
 \endhead
 \midrule
-\multicolumn{10}{r}{Continued on next page} \\
+\multicolumn{6}{r}{Continued on next page} \\
 \midrule
 \endfoot
 \bottomrule
 \endlastfoot
-armadillo & bsah & 4 & k-way & 1.067100 & 1.034200 & 1.032000 & -3.100000 & 6.602000 & 3.40e-06*** \\
-stanford-bunny & bsah & 4 & k-way & 0.995200 & 0.953800 & 1.043000 & -4.200000 & 11.141000 & 1.65e-07*** \\
-suzanne & bsah & 4 & k-way & 1.239500 & 1.145300 & 1.082000 & -7.600000 & 21.342000 & 3.37e-09*** \\
-teapot & bsah & 4 & k-way & 0.894200 & 0.857100 & 1.043000 & -4.100000 & 12.137000 & 4.93e-07*** \\
-armadillo & median & 4 & k-way & 1.308100 & 1.246000 & 1.050000 & -4.700000 & 13.030000 & 3.11e-07*** \\
-stanford-bunny & median & 4 & k-way & 1.176900 & 1.109500 & 1.061000 & -5.700000 & 14.783000 & 8.86e-08*** \\
-suzanne & median & 4 & k-way & 1.510400 & 1.412700 & 1.069000 & -6.500000 & 16.531000 & 3.92e-08*** \\
-teapot & median & 4 & k-way & 1.080300 & 1.010800 & 1.069000 & -6.400000 & 16.551000 & 2.01e-08*** \\
-armadillo & sah & 4 & k-way & 1.041700 & 1.008800 & 1.033000 & -3.200000 & 27.073000 & 1.74e-14*** \\
-stanford-bunny & sah & 4 & k-way & 0.972800 & 0.937000 & 1.038000 & -3.700000 & 40.215000 & 1.38e-18*** \\
-suzanne & sah & 4 & k-way & 1.177300 & 1.095700 & 1.074000 & -6.900000 & 74.285000 & 2.92e-20*** \\
-teapot & sah & 4 & k-way & 0.869600 & 0.839400 & 1.036000 & -3.500000 & 54.864000 & 1.73e-21*** \\
-armadillo & bsah & 4 & collapsed & 1.067100 & 1.030300 & 1.036000 & -3.400000 & 10.426000 & 1.09e-06*** \\
-stanford-bunny & bsah & 4 & collapsed & 0.995200 & 0.952200 & 1.045000 & -4.300000 & 12.118000 & 3.23e-07*** \\
-suzanne & bsah & 4 & collapsed & 1.239500 & 1.145400 & 1.082000 & -7.600000 & 21.368000 & 3.73e-09*** \\
-teapot & bsah & 4 & collapsed & 0.894200 & 0.858300 & 1.042000 & -4.000000 & 11.666000 & 5.79e-07*** \\
-armadillo & median & 4 & collapsed & 1.308100 & 1.246100 & 1.050000 & -4.700000 & 12.958000 & 2.88e-07*** \\
-stanford-bunny & median & 4 & collapsed & 1.176900 & 1.113500 & 1.057000 & -5.400000 & 10.424000 & 5.24e-09*** \\
-suzanne & median & 4 & collapsed & 1.510400 & 1.412100 & 1.070000 & -6.500000 & 16.630000 & 3.65e-08*** \\
-teapot & median & 4 & collapsed & 1.080300 & 1.010500 & 1.069000 & -6.500000 & 16.867000 & 3.25e-08*** \\
-armadillo & sah & 4 & collapsed & 1.041700 & 1.009500 & 1.032000 & -3.100000 & 27.127000 & 1.13e-14*** \\
-stanford-bunny & sah & 4 & collapsed & 0.972800 & 0.937000 & 1.038000 & -3.700000 & 32.792000 & 5.44e-17*** \\
-suzanne & sah & 4 & collapsed & 1.177300 & 1.096600 & 1.074000 & -6.900000 & 76.759000 & 9.59e-19*** \\
-teapot & sah & 4 & collapsed & 0.869600 & 0.839500 & 1.036000 & -3.500000 & 66.097000 & 1.66e-19*** \\
-armadillo & bsah & 8 & k-way & 1.067100 & 1.650900 & 0.646000 & 54.700000 & -161.816000 & 1.10e-19*** \\
-stanford-bunny & bsah & 8 & k-way & 0.995200 & 1.489400 & 0.668000 & 49.700000 & -138.964000 & 1.46e-17*** \\
-suzanne & bsah & 8 & k-way & 1.239500 & 1.610500 & 0.770000 & 29.900000 & -82.872000 & 2.59e-15*** \\
-teapot & bsah & 8 & k-way & 0.894200 & 1.256400 & 0.712000 & 40.500000 & -116.779000 & 6.97e-17*** \\
-armadillo & median & 8 & k-way & 1.308100 & 2.066100 & 0.633000 & 57.900000 & -157.960000 & 1.82e-17*** \\
-stanford-bunny & median & 8 & k-way & 1.176900 & 1.644800 & 0.716000 & 39.800000 & -103.006000 & 2.15e-15*** \\
-suzanne & median & 8 & k-way & 1.510400 & 1.995600 & 0.757000 & 32.100000 & -81.139000 & 6.21e-15*** \\
-teapot & median & 8 & k-way & 1.080300 & 1.533600 & 0.704000 & 42.000000 & -107.064000 & 1.34e-16*** \\
-armadillo & sah & 8 & k-way & 1.041700 & 1.614600 & 0.645000 & 55.000000 & -641.499000 & 2.96e-40*** \\
-stanford-bunny & sah & 8 & k-way & 0.972800 & 1.482600 & 0.656000 & 52.400000 & -420.162000 & 1.15e-33*** \\
-suzanne & sah & 8 & k-way & 1.177300 & 1.567800 & 0.751000 & 33.200000 & -302.358000 & 1.14e-34*** \\
-teapot & sah & 8 & k-way & 0.869600 & 1.233900 & 0.705000 & 41.900000 & -561.159000 & 3.06e-37*** \\
-armadillo & bsah & 8 & collapsed & 1.067100 & 1.652600 & 0.646000 & 54.900000 & -166.058000 & 1.74e-18*** \\
-stanford-bunny & bsah & 8 & collapsed & 0.995200 & 1.490800 & 0.668000 & 49.800000 & -112.347000 & 7.15e-26*** \\
-suzanne & bsah & 8 & collapsed & 1.239500 & 1.613300 & 0.768000 & 30.200000 & -72.445000 & 1.34e-20*** \\
-teapot & bsah & 8 & collapsed & 0.894200 & 1.257500 & 0.711000 & 40.600000 & -118.088000 & 1.64e-16*** \\
-armadillo & median & 8 & collapsed & 1.308100 & 2.067900 & 0.633000 & 58.100000 & -159.064000 & 3.06e-17*** \\
-stanford-bunny & median & 8 & collapsed & 1.176900 & 1.646000 & 0.715000 & 39.900000 & -101.441000 & 3.32e-16*** \\
-suzanne & median & 8 & collapsed & 1.510400 & 1.993900 & 0.758000 & 32.000000 & -80.991000 & 7.62e-15*** \\
-teapot & median & 8 & collapsed & 1.080300 & 1.533700 & 0.704000 & 42.000000 & -108.168000 & 3.95e-16*** \\
-armadillo & sah & 8 & collapsed & 1.041700 & 1.614400 & 0.645000 & 55.000000 & -481.267000 & 2.50e-34*** \\
-stanford-bunny & sah & 8 & collapsed & 0.972800 & 1.482400 & 0.656000 & 52.400000 & -490.752000 & 4.46e-38*** \\
-suzanne & sah & 8 & collapsed & 1.177300 & 1.567500 & 0.751000 & 33.100000 & -385.515000 & 3.19e-25*** \\
-teapot & sah & 8 & collapsed & 0.869600 & 1.232400 & 0.706000 & 41.700000 & -494.479000 & 2.36e-33*** \\
-armadillo & bsah & 16 & k-way & 1.067100 & 10.835300 & 0.098000 & 915.400000 & -1399.356000 & 6.08e-38*** \\
-stanford-bunny & bsah & 16 & k-way & 0.995200 & 8.074400 & 0.123000 & 711.300000 & -1501.141000 & 4.96e-47*** \\
-suzanne & bsah & 16 & k-way & 1.239500 & 7.457200 & 0.166000 & 501.600000 & -1098.569000 & 2.04e-43*** \\
-teapot & bsah & 16 & k-way & 0.894200 & 5.665300 & 0.158000 & 533.600000 & -1042.544000 & 7.07e-44*** \\
-armadillo & median & 16 & k-way & 1.308100 & 13.528600 & 0.097000 & 934.200000 & -1577.248000 & 3.42e-45*** \\
-stanford-bunny & median & 16 & k-way & 1.176900 & 8.519600 & 0.138000 & 623.900000 & -1200.632000 & 2.99e-45*** \\
-suzanne & median & 16 & k-way & 1.510400 & 8.959000 & 0.169000 & 493.100000 & -1105.016000 & 2.88e-36*** \\
-teapot & median & 16 & k-way & 1.080300 & 5.834500 & 0.185000 & 440.100000 & -878.676000 & 3.51e-42*** \\
-armadillo & sah & 16 & k-way & 1.041700 & 10.704200 & 0.097000 & 927.500000 & -1794.561000 & 5.02e-27*** \\
-stanford-bunny & sah & 16 & k-way & 0.972800 & 8.134300 & 0.120000 & 736.200000 & -1737.566000 & 1.70e-27*** \\
-suzanne & sah & 16 & k-way & 1.177300 & 7.245700 & 0.162000 & 515.500000 & -1890.557000 & 7.05e-31*** \\
-teapot & sah & 16 & k-way & 0.869600 & 5.644400 & 0.154000 & 549.100000 & -2201.354000 & 1.03e-28*** \\
-armadillo & bsah & 16 & collapsed & 1.067100 & 10.831700 & 0.099000 & 915.100000 & -1246.617000 & 1.59e-34*** \\
-stanford-bunny & bsah & 16 & collapsed & 0.995200 & 8.090300 & 0.123000 & 712.900000 & -812.755000 & 2.09e-30*** \\
-suzanne & bsah & 16 & collapsed & 1.239500 & 7.451500 & 0.166000 & 501.200000 & -1227.506000 & 1.21e-37*** \\
-teapot & bsah & 16 & collapsed & 0.894200 & 5.663100 & 0.158000 & 533.300000 & -1279.832000 & 2.76e-42*** \\
-armadillo & median & 16 & collapsed & 1.308100 & 13.533200 & 0.097000 & 934.600000 & -1477.033000 & 9.59e-43*** \\
-stanford-bunny & median & 16 & collapsed & 1.176900 & 8.526600 & 0.138000 & 624.500000 & -1368.387000 & 1.86e-40*** \\
-suzanne & median & 16 & collapsed & 1.510400 & 8.961700 & 0.169000 & 493.300000 & -1071.240000 & 1.91e-38*** \\
-teapot & median & 16 & collapsed & 1.080300 & 5.833500 & 0.185000 & 440.000000 & -1050.031000 & 2.17e-32*** \\
-armadillo & sah & 16 & collapsed & 1.041700 & 10.697400 & 0.097000 & 926.900000 & -1404.694000 & 9.06e-26*** \\
-stanford-bunny & sah & 16 & collapsed & 0.972800 & 8.143800 & 0.119000 & 737.200000 & -2762.417000 & 1.06e-31*** \\
-suzanne & sah & 16 & collapsed & 1.177300 & 7.251600 & 0.162000 & 516.000000 & -2562.211000 & 1.52e-36*** \\
-teapot & sah & 16 & collapsed & 0.869600 & 5.644700 & 0.154000 & 549.100000 & -1970.777000 & 6.23e-28*** \\
+armadillo & bsah & 4 & k-way & -3.1 & 3.40e-06*** \\
+stanford-bunny & bsah & 4 & k-way & -4.2 & 1.65e-07*** \\
+suzanne & bsah & 4 & k-way & -7.6 & 3.37e-09*** \\
+teapot & bsah & 4 & k-way & -4.1 & 4.93e-07*** \\
+armadillo & median & 4 & k-way & -4.7 & 3.11e-07*** \\
+stanford-bunny & median & 4 & k-way & -5.7 & 8.86e-08*** \\
+suzanne & median & 4 & k-way & -6.5 & 3.92e-08*** \\
+teapot & median & 4 & k-way & -6.4 & 2.01e-08*** \\
+armadillo & sah & 4 & k-way & -3.2 & 1.74e-14*** \\
+stanford-bunny & sah & 4 & k-way & -3.7 & 1.38e-18*** \\
+suzanne & sah & 4 & k-way & -6.9 & 2.92e-20*** \\
+teapot & sah & 4 & k-way & -3.5 & 1.73e-21*** \\
+armadillo & bsah & 4 & col. & -3.4 & 1.09e-06*** \\
+stanford-bunny & bsah & 4 & col. & -4.3 & 3.23e-07*** \\
+suzanne & bsah & 4 & col. & -7.6 & 3.73e-09*** \\
+teapot & bsah & 4 & col. & -4.0 & 5.79e-07*** \\
+armadillo & median & 4 & col. & -4.7 & 2.88e-07*** \\
+stanford-bunny & median & 4 & col. & -5.4 & 5.24e-09*** \\
+suzanne & median & 4 & col. & -6.5 & 3.65e-08*** \\
+teapot & median & 4 & col. & -6.5 & 3.25e-08*** \\
+armadillo & sah & 4 & col. & -3.1 & 1.13e-14*** \\
+stanford-bunny & sah & 4 & col. & -3.7 & 5.44e-17*** \\
+suzanne & sah & 4 & col. & -6.9 & 9.59e-19*** \\
+teapot & sah & 4 & col. & -3.5 & 1.66e-19*** \\
+armadillo & bsah & 8 & k-way & 54.7 & 1.10e-19*** \\
+stanford-bunny & bsah & 8 & k-way & 49.7 & 1.46e-17*** \\
+suzanne & bsah & 8 & k-way & 29.9 & 2.59e-15*** \\
+teapot & bsah & 8 & k-way & 40.5 & 6.97e-17*** \\
+armadillo & median & 8 & k-way & 57.9 & 1.82e-17*** \\
+stanford-bunny & median & 8 & k-way & 39.8 & 2.15e-15*** \\
+suzanne & median & 8 & k-way & 32.1 & 6.21e-15*** \\
+teapot & median & 8 & k-way & 42.0 & 1.34e-16*** \\
+armadillo & sah & 8 & k-way & 55.0 & 2.96e-40*** \\
+stanford-bunny & sah & 8 & k-way & 52.4 & 1.15e-33*** \\
+suzanne & sah & 8 & k-way & 33.2 & 1.14e-34*** \\
+teapot & sah & 8 & k-way & 41.9 & 3.06e-37*** \\
+armadillo & bsah & 8 & col. & 54.9 & 1.74e-18*** \\
+stanford-bunny & bsah & 8 & col. & 49.8 & 7.15e-26*** \\
+suzanne & bsah & 8 & col. & 30.2 & 1.34e-20*** \\
+teapot & bsah & 8 & col. & 40.6 & 1.64e-16*** \\
+armadillo & median & 8 & col. & 58.1 & 3.06e-17*** \\
+stanford-bunny & median & 8 & col. & 39.9 & 3.32e-16*** \\
+suzanne & median & 8 & col. & 32.0 & 7.62e-15*** \\
+teapot & median & 8 & col. & 42.0 & 3.95e-16*** \\
+armadillo & sah & 8 & col. & 55.0 & 2.50e-34*** \\
+stanford-bunny & sah & 8 & col. & 52.4 & 4.46e-38*** \\
+suzanne & sah & 8 & col. & 33.1 & 3.19e-25*** \\
+teapot & sah & 8 & col. & 41.7 & 2.36e-33*** \\
+armadillo & bsah & 16 & k-way & 915.4 & 6.08e-38*** \\
+stanford-bunny & bsah & 16 & k-way & 711.3 & 4.96e-47*** \\
+suzanne & bsah & 16 & k-way & 501.6 & 2.04e-43*** \\
+teapot & bsah & 16 & k-way & 533.6 & 7.07e-44*** \\
+armadillo & median & 16 & k-way & 934.2 & 3.42e-45*** \\
+stanford-bunny & median & 16 & k-way & 623.9 & 2.99e-45*** \\
+suzanne & median & 16 & k-way & 493.1 & 2.88e-36*** \\
+teapot & median & 16 & k-way & 440.1 & 3.51e-42*** \\
+armadillo & sah & 16 & k-way & 927.5 & 5.02e-27*** \\
+stanford-bunny & sah & 16 & k-way & 736.2 & 1.70e-27*** \\
+suzanne & sah & 16 & k-way & 515.5 & 7.05e-31*** \\
+teapot & sah & 16 & k-way & 549.1 & 1.03e-28*** \\
+armadillo & bsah & 16 & col. & 915.1 & 1.59e-34*** \\
+stanford-bunny & bsah & 16 & col. & 712.9 & 2.09e-30*** \\
+suzanne & bsah & 16 & col. & 501.2 & 1.21e-37*** \\
+teapot & bsah & 16 & col. & 533.3 & 2.76e-42*** \\
+armadillo & median & 16 & col. & 934.6 & 9.59e-43*** \\
+stanford-bunny & median & 16 & col. & 624.5 & 1.86e-40*** \\
+suzanne & median & 16 & col. & 493.3 & 1.91e-38*** \\
+teapot & median & 16 & col. & 440.0 & 2.17e-32*** \\
+armadillo & sah & 16 & col. & 926.9 & 9.06e-26*** \\
+stanford-bunny & sah & 16 & col. & 737.2 & 1.06e-31*** \\
+suzanne & sah & 16 & col. & 516.0 & 1.52e-36*** \\
+teapot & sah & 16 & col. & 549.1 & 6.23e-28*** \\
 \end{longtable}
