--- a/thesis/results/all_tables_consolidated.tex
+++ b/thesis/results/all_tables_consolidated.tex
@@ -17,7 +17,7 @@
 \clearpage
 
 \section{Collapsed vs k-way Algorithm Comparison}
-\begin{longtable}[b]{llrll}
+\begin{longtable}{llrll}
 \caption{Collapsed vs k-way Algorithm Comparison Results} \label{tab:comparison_results} \\
 \toprule
 Model & Algorithm & k & \% Change & p-value \\
@@ -75,7 +75,7 @@ teapot & sah & 16 & 0.0 & 9.57e-01 \\
 \clearpage
 
 \section{Dynamic Model Analysis Results}
-\begin{longtable}[b]{llrlll}
+\begin{longtable}{llrlll}
 \caption{Dynamic Model Analysis: Combined Construction + Traversal Time} \label{tab:dynamic_model_results} \\
 \toprule
 Model & Algorithm & k & Type & \% Change & p-value \\
@@ -104,18 +104,18 @@ armadillo & sah & 4 & k-way & 0.4 & 5.60e-03** \\
 stanford-bunny & sah & 4 & k-way & -0.4 & 9.52e-03** \\
 suzanne & sah & 4 & k-way & -6.8 & 1.45e-20*** \\
 teapot & sah & 4 & k-way & -2.8 & 9.72e-20*** \\
-armadillo & bsah & 4 & col. & -0.2 & 5.91e-01 \\
-stanford-bunny & bsah & 4 & col. & -0.8 & 5.53e-02 \\
-suzanne & bsah & 4 & col. & -7.5 & 5.50e-09*** \\
-teapot & bsah & 4 & col. & -3.3 & 3.99e-06*** \\
-armadillo & median & 4 & col. & -1.5 & 2.64e-03** \\
-stanford-bunny & median & 4 & col. & -2.2 & 1.50e-04*** \\
-suzanne & median & 4 & col. & -6.5 & 3.90e-08*** \\
-teapot & median & 4 & col. & -6.0 & 6.75e-08*** \\
-armadillo & sah & 4 & col. & 0.4 & 6.33e-04*** \\
-stanford-bunny & sah & 4 & col. & -0.4 & 6.49e-03** \\
-suzanne & sah & 4 & col. & -6.7 & 9.14e-19*** \\
-teapot & sah & 4 & col. & -2.8 & 2.32e-17*** \\
+armadillo & bsah & 4 & collapsed & -0.2 & 5.91e-01 \\
+stanford-bunny & bsah & 4 & collapsed & -0.8 & 5.53e-02 \\
+suzanne & bsah & 4 & collapsed & -7.5 & 5.50e-09*** \\
+teapot & bsah & 4 & collapsed & -3.3 & 3.99e-06*** \\
+armadillo & median & 4 & collapsed & -1.5 & 2.64e-03** \\
+stanford-bunny & median & 4 & collapsed & -2.2 & 1.50e-04*** \\
+suzanne & median & 4 & collapsed & -6.5 & 3.90e-08*** \\
+teapot & median & 4 & collapsed & -6.0 & 6.75e-08*** \\
+armadillo & sah & 4 & collapsed & 0.4 & 6.33e-04*** \\
+stanford-bunny & sah & 4 & collapsed & -0.4 & 6.49e-03** \\
+suzanne & sah & 4 & collapsed & -6.7 & 9.14e-19*** \\
+teapot & sah & 4 & collapsed & -2.8 & 2.32e-17*** \\
 armadillo & bsah & 8 & k-way & 16.1 & 7.72e-13*** \\
 stanford-bunny & bsah & 8 & k-way & 18.4 & 7.65e-13*** \\
 suzanne & bsah & 8 & k-way & 29.5 & 4.45e-15*** \\
@@ -128,18 +128,18 @@ armadillo & sah & 8 & k-way & 15.7 & 1.18e-32*** \\
 stanford-bunny & sah & 8 & k-way & 18.8 & 7.80e-28*** \\
 suzanne & sah & 8 & k-way & 32.7 & 1.22e-34*** \\
 teapot & sah & 8 & k-way & 36.6 & 6.94e-38*** \\
-armadillo & bsah & 8 & col. & 16.0 & 2.03e-12*** \\
-stanford-bunny & bsah & 8 & col. & 18.5 & 3.52e-14*** \\
-suzanne & bsah & 8 & col. & 29.8 & 3.93e-20*** \\
-teapot & bsah & 8 & col. & 35.6 & 9.24e-16*** \\
-armadillo & median & 8 & col. & 35.7 & 2.54e-15*** \\
-stanford-bunny & median & 8 & col. & 28.5 & 7.53e-15*** \\
-suzanne & median & 8 & col. & 31.9 & 7.94e-15*** \\
-teapot & median & 8 & col. & 40.5 & 6.87e-16*** \\
-armadillo & sah & 8 & col. & 15.6 & 3.66e-32*** \\
-stanford-bunny & sah & 8 & col. & 18.7 & 1.08e-28*** \\
-suzanne & sah & 8 & col. & 32.7 & 7.40e-25*** \\
-teapot & sah & 8 & col. & 36.5 & 4.23e-35*** \\
+armadillo & bsah & 8 & collapsed & 16.0 & 2.03e-12*** \\
+stanford-bunny & bsah & 8 & collapsed & 18.5 & 3.52e-14*** \\
+suzanne & bsah & 8 & collapsed & 29.8 & 3.93e-20*** \\
+teapot & bsah & 8 & collapsed & 35.6 & 9.24e-16*** \\
+armadillo & median & 8 & collapsed & 35.7 & 2.54e-15*** \\
+stanford-bunny & median & 8 & collapsed & 28.5 & 7.53e-15*** \\
+suzanne & median & 8 & collapsed & 31.9 & 7.94e-15*** \\
+teapot & median & 8 & collapsed & 40.5 & 6.87e-16*** \\
+armadillo & sah & 8 & collapsed & 15.6 & 3.66e-32*** \\
+stanford-bunny & sah & 8 & collapsed & 18.7 & 1.08e-28*** \\
+suzanne & sah & 8 & collapsed & 32.7 & 7.40e-25*** \\
+teapot & sah & 8 & collapsed & 36.5 & 4.23e-35*** \\
 armadillo & bsah & 16 & k-way & 247.0 & 1.68e-34*** \\
 stanford-bunny & bsah & 16 & k-way & 249.2 & 7.67e-30*** \\
 suzanne & bsah & 16 & k-way & 494.3 & 1.11e-42*** \\
@@ -152,24 +152,24 @@ armadillo & sah & 16 & k-way & 237.1 & 2.98e-29*** \\
 stanford-bunny & sah & 16 & k-way & 246.4 & 3.77e-32*** \\
 suzanne & sah & 16 & k-way & 507.6 & 6.36e-31*** \\
 teapot & sah & 16 & k-way & 475.8 & 3.12e-29*** \\
-armadillo & bsah & 16 & col. & 246.8 & 2.27e-34*** \\
-stanford-bunny & bsah & 16 & col. & 249.9 & 4.74e-38*** \\
-suzanne & bsah & 16 & col. & 493.9 & 1.16e-36*** \\
-teapot & bsah & 16 & col. & 463.8 & 2.52e-38*** \\
-armadillo & median & 16 & col. & 542.2 & 2.77e-44*** \\
-stanford-bunny & median & 16 & col. & 416.5 & 4.42e-32*** \\
-suzanne & median & 16 & col. & 491.5 & 2.56e-38*** \\
-teapot & median & 16 & col. & 422.5 & 2.15e-31*** \\
-armadillo & sah & 16 & col. & 236.9 & 7.87e-27*** \\
-stanford-bunny & sah & 16 & col. & 246.8 & 5.11e-45*** \\
-suzanne & sah & 16 & col. & 508.1 & 1.86e-36*** \\
-teapot & sah & 16 & col. & 475.8 & 2.50e-28*** \\
+armadillo & bsah & 16 & collapsed & 246.8 & 2.27e-34*** \\
+stanford-bunny & bsah & 16 & collapsed & 249.9 & 4.74e-38*** \\
+suzanne & bsah & 16 & collapsed & 493.9 & 1.16e-36*** \\
+teapot & bsah & 16 & collapsed & 463.8 & 2.52e-38*** \\
+armadillo & median & 16 & collapsed & 542.2 & 2.77e-44*** \\
+stanford-bunny & median & 16 & collapsed & 416.5 & 4.42e-32*** \\
+suzanne & median & 16 & collapsed & 491.5 & 2.56e-38*** \\
+teapot & median & 16 & collapsed & 422.5 & 2.15e-31*** \\
+armadillo & sah & 16 & collapsed & 236.9 & 7.87e-27*** \\
+stanford-bunny & sah & 16 & collapsed & 246.8 & 5.11e-45*** \\
+suzanne & sah & 16 & collapsed & 508.1 & 1.86e-36*** \\
+teapot & sah & 16 & collapsed & 475.8 & 2.50e-28*** \\
 \end{longtable}
 
 \clearpage
 
 \section{Statistical Results Table}
-\begin{longtable}[b]{llrlll}
+\begin{longtable}{llrlll}
 \caption{BVH Performance Comparison Results} \label{tab:statistical_results} \\
 \toprule
 Model & Algorithm & k & Type & \% Change & p-value \\
@@ -198,18 +198,18 @@ armadillo & sah & 4 & k-way & -3.2 & 1.74e-14*** \\
 stanford-bunny & sah & 4 & k-way & -3.7 & 1.38e-18*** \\
 suzanne & sah & 4 & k-way & -6.9 & 2.92e-20*** \\
 teapot & sah & 4 & k-way & -3.5 & 1.73e-21*** \\
-armadillo & bsah & 4 & col. & -3.4 & 1.09e-06*** \\
-stanford-bunny & bsah & 4 & col. & -4.3 & 3.23e-07*** \\
-suzanne & bsah & 4 & col. & -7.6 & 3.73e-09*** \\
-teapot & bsah & 4 & col. & -4.0 & 5.79e-07*** \\
-armadillo & median & 4 & col. & -4.7 & 2.88e-07*** \\
-stanford-bunny & median & 4 & col. & -5.4 & 5.24e-09*** \\
-suzanne & median & 4 & col. & -6.5 & 3.65e-08*** \\
-teapot & median & 4 & col. & -6.5 & 3.25e-08*** \\
-armadillo & sah & 4 & col. & -3.1 & 1.13e-14*** \\
-stanford-bunny & sah & 4 & col. & -3.7 & 5.44e-17*** \\
-suzanne & sah & 4 & col. & -6.9 & 9.59e-19*** \\
-teapot & sah & 4 & col. & -3.5 & 1.66e-19*** \\
+armadillo & bsah & 4 & collapsed & -3.4 & 1.09e-06*** \\
+stanford-bunny & bsah & 4 & collapsed & -4.3 & 3.23e-07*** \\
+suzanne & bsah & 4 & collapsed & -7.6 & 3.73e-09*** \\
+teapot & bsah & 4 & collapsed & -4.0 & 5.79e-07*** \\
+armadillo & median & 4 & collapsed & -4.7 & 2.88e-07*** \\
+stanford-bunny & median & 4 & collapsed & -5.4 & 5.24e-09*** \\
+suzanne & median & 4 & collapsed & -6.5 & 3.65e-08*** \\
+teapot & median & 4 & collapsed & -6.5 & 3.25e-08*** \\
+armadillo & sah & 4 & collapsed & -3.1 & 1.13e-14*** \\
+stanford-bunny & sah & 4 & collapsed & -3.7 & 5.44e-17*** \\
+suzanne & sah & 4 & collapsed & -6.9 & 9.59e-19*** \\
+teapot & sah & 4 & collapsed & -3.5 & 1.66e-19*** \\
 armadillo & bsah & 8 & k-way & 54.7 & 1.10e-19*** \\
 stanford-bunny & bsah & 8 & k-way & 49.7 & 1.46e-17*** \\
 suzanne & bsah & 8 & k-way & 29.9 & 2.59e-15*** \\
@@ -222,18 +222,18 @@ armadillo & sah & 8 & k-way & 55.0 & 2.96e-40*** \\
 stanford-bunny & sah & 8 & k-way & 52.4 & 1.15e-33*** \\
 suzanne & sah & 8 & k-way & 33.2 & 1.14e-34*** \\
 teapot & sah & 8 & k-way & 41.9 & 3.06e-37*** \\
-armadillo & bsah & 8 & col. & 54.9 & 1.74e-18*** \\
-stanford-bunny & bsah & 8 & col. & 49.8 & 7.15e-26*** \\
-suzanne & bsah & 8 & col. & 30.2 & 1.34e-20*** \\
-teapot & bsah & 8 & col. & 40.6 & 1.64e-16*** \\
-armadillo & median & 8 & col. & 58.1 & 3.06e-17*** \\
-stanford-bunny & median & 8 & col. & 39.9 & 3.32e-16*** \\
-suzanne & median & 8 & col. & 32.0 & 7.62e-15*** \\
-teapot & median & 8 & col. & 42.0 & 3.95e-16*** \\
-armadillo & sah & 8 & col. & 55.0 & 2.50e-34*** \\
-stanford-bunny & sah & 8 & col. & 52.4 & 4.46e-38*** \\
-suzanne & sah & 8 & col. & 33.1 & 3.19e-25*** \\
-teapot & sah & 8 & col. & 41.7 & 2.36e-33*** \\
+armadillo & bsah & 8 & collapsed & 54.9 & 1.74e-18*** \\
+stanford-bunny & bsah & 8 & collapsed & 49.8 & 7.15e-26*** \\
+suzanne & bsah & 8 & collapsed & 30.2 & 1.34e-20*** \\
+teapot & bsah & 8 & collapsed & 40.6 & 1.64e-16*** \\
+armadillo & median & 8 & collapsed & 58.1 & 3.06e-17*** \\
+stanford-bunny & median & 8 & collapsed & 39.9 & 3.32e-16*** \\
+suzanne & median & 8 & collapsed & 32.0 & 7.62e-15*** \\
+teapot & median & 8 & collapsed & 42.0 & 3.95e-16*** \\
+armadillo & sah & 8 & collapsed & 55.0 & 2.50e-34*** \\
+stanford-bunny & sah & 8 & collapsed & 52.4 & 4.46e-38*** \\
+suzanne & sah & 8 & collapsed & 33.1 & 3.19e-25*** \\
+teapot & sah & 8 & collapsed & 41.7 & 2.36e-33*** \\
 armadillo & bsah & 16 & k-way & 915.4 & 6.08e-38*** \\
 stanford-bunny & bsah & 16 & k-way & 711.3 & 4.96e-47*** \\
 suzanne & bsah & 16 & k-way & 501.6 & 2.04e-43*** \\
@@ -246,24 +246,24 @@ armadillo & sah & 16 & k-way & 927.5 & 5.02e-27*** \\
 stanford-bunny & sah & 16 & k-way & 736.2 & 1.70e-27*** \\
 suzanne & sah & 16 & k-way & 515.5 & 7.05e-31*** \\
 teapot & sah & 16 & k-way & 549.1 & 1.03e-28*** \\
-armadillo & bsah & 16 & col. & 915.1 & 1.59e-34*** \\
-stanford-bunny & bsah & 16 & col. & 712.9 & 2.09e-30*** \\
-suzanne & bsah & 16 & col. & 501.2 & 1.21e-37*** \\
-teapot & bsah & 16 & col. & 533.3 & 2.76e-42*** \\
-armadillo & median & 16 & col. & 934.6 & 9.59e-43*** \\
-stanford-bunny & median & 16 & col. & 624.5 & 1.86e-40*** \\
-suzanne & median & 16 & col. & 493.3 & 1.91e-38*** \\
-teapot & median & 16 & col. & 440.0 & 2.17e-32*** \\
-armadillo & sah & 16 & col. & 926.9 & 9.06e-26*** \\
-stanford-bunny & sah & 16 & col. & 737.2 & 1.06e-31*** \\
-suzanne & sah & 16 & col. & 516.0 & 1.52e-36*** \\
-teapot & sah & 16 & col. & 549.1 & 6.23e-28*** \\
+armadillo & bsah & 16 & collapsed & 915.1 & 1.59e-34*** \\
+stanford-bunny & bsah & 16 & collapsed & 712.9 & 2.09e-30*** \\
+suzanne & bsah & 16 & collapsed & 501.2 & 1.21e-37*** \\
+teapot & bsah & 16 & collapsed & 533.3 & 2.76e-42*** \\
+armadillo & median & 16 & collapsed & 934.6 & 9.59e-43*** \\
+stanford-bunny & median & 16 & collapsed & 624.5 & 1.86e-40*** \\
+suzanne & median & 16 & collapsed & 493.3 & 1.91e-38*** \\
+teapot & median & 16 & collapsed & 440.0 & 2.17e-32*** \\
+armadillo & sah & 16 & collapsed & 926.9 & 9.06e-26*** \\
+stanford-bunny & sah & 16 & collapsed & 737.2 & 1.06e-31*** \\
+suzanne & sah & 16 & collapsed & 516.0 & 1.52e-36*** \\
+teapot & sah & 16 & collapsed & 549.1 & 6.23e-28*** \\
 \end{longtable}
 
 \clearpage
 
 \section{Collapsed vs k-way Algorithm Comparison}
-\begin{longtable}[b]{llrll}
+\begin{longtable}{llrll}
 \caption{Collapsed vs k-way Algorithm Comparison Results} \label{tab:comparison_results} \\
 \toprule
 Model & Algorithm & k & \% Change & p-value \\
