--- a/thesis/results/dynamic_comparison_results_table.tex
+++ b/thesis/results/dynamic_comparison_results_table.tex
@@ -1,4 +1,4 @@
-\begin{longtable}[b]{llrll}
+\begin{longtable}{llrll}
 \caption{Collapsed vs k-way Algorithm Comparison Results} \label{tab:comparison_results} \\
 \toprule
 Model & Algorithm & k & \% Change & p-value \\
